<resources>
    <string name="app_name">Shop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="catagory">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>

    <string name="label_ware_detail_activity">商品详情</string>
    <string name="login">登录</string>
    <string name="title_login">登录</string>
    <string name="btn_login">登录</string>
    <string name="to_login">点击登录</string>
    <string name="myorders">我的订单</string>
    <string name="btn_exit">退出登录</string>
    <string name="to_register">还没注册？点击注册</string>
    <string name="register">注册</string>
    <string name="next_step">下一步</string>
</resources>
