<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#000"
        android:visibility="gone"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?attr/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFF"
            android:src="@drawable/default_head"/>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_login"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="9dp"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/already_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txt_myorders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_list_o"
                android:text="@string/myorders"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:drawablePadding="5dp"/>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_exit"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@color/material_red"/>
        </LinearLayout>

    </ScrollView>
    

</LinearLayout>
